<resources>
    <string name="app_name">Almag</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="tabHomeDetails">SELECT</string>
    <string name="tabHomeCalendar">CALENDAR</string>
    <string name="tabHomeDiseases">DISEASES</string>
    <string name="tabHomeAlmagPlus">ALMAG+</string>
    <string name="durationOfTreatment">"%d / %d days"</string>
    <string name="durationOfProcedure">Duration of procedure %d minutes</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_new_timetable">New timetable</string>
    <string name="durationOfProcedureNewTimetable">Duration of procedure(minutes)</string>
    <string name="repeatNewTimetable">Interval(days)</string>
    <string name="nameOfTreatment">Treatment</string>
    <string name="nameOfTimetable">Age</string>
    <string name="ok">ОК</string>
    <string name="every_day">Every %d days</string>
    <string name="countOfProcedures">Count of procedures</string>
    <string name="NeedUpdateBase">You need to update your database!</string>
    <string name="loading">Loading data...</string>
    <string name="diseases_nav_menu">Diseases</string>
    <string name="magnetotherapy_nav_menu">Magnetotherapy</string>
    <string name="almag_plus_nav_menu">Almag+</string>
    <string name="nav_header_title">Almag</string>
    <string name="nav_header_subtitle">Planner of magnetotherapy procedures carried out with the help of Almag apparatus</string>
    <string name="nav_header_desc">App description</string>
    <string name="mode">Mode</string>
    <string name="planTreatingView">TREATING</string>
    <string name="planTreatingDetails">TREATING</string>
    <string name="planTreatingCalendar">TREATING</string>
    <string name="aboutDetailsMainActivity">Detailed information about the treatment Plan</string>
    <string name="aboutCalendarMainActivity">Treating plan for 7 days</string>
    <string name="aboutDiseasesMainActivity">Detailed information about diseases</string>
    <string name="aboutAlmagPlusMainActivity">Detailed information about Almag+</string>
    <string name="cancel">Cancel</string>
    <string name="remindBefore">Remind before</string>
    <string name="AlmagPlus">ALMAG+</string>
    <string name="articles">INFORMATION</string>
    <string name="time_of_procedure">PROCEDURE REMINDER</string>
    <string name="feedback">FEEDBACK</string>
    <string name="magnitotherapy">MAGNITOTHERAPY</string>
    <string name="back">BACK</string>
    <string name="editPlan">EDIT</string>
    <string name="start">START</string>
    <string name="repeat">REPEAT</string>
    <string name="remind">REMIND ABOUT PROCEDURE</string>

    <string-array name="remindBefore">
        <item>не напоминать</item>
        <item>5 минут</item>
        <item>10 минут</item>
        <item>15 минут</item>
    </string-array>
    <string name="newPlan">NEW</string>
    <string name="otherDevices">Other devices</string>
    <string name="treat">TREAT</string>
    <string name="feedbackCall">CALL</string>
    <string name="feedbackEmail">EMAIL</string>
    <string name="newPlanOfTreating">New plan of treating</string>
    <string name="feedbackCallMenu">Call</string>
    <string name="feedbackEmailMenu">Email</string>
    <string name="help">Help</string>
    <string name="menu">Menu</string>
    <string name="detailsOfTreating">Details</string>
    <string name="exit">Exit</string>
    <string name="search">Search...</string>
    <string name="move">MOVE</string>
    <string name="confirmToSite">Do you want to open your browser and go to external site?</string>
</resources>
