<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailsActivity">


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include layout="@layout/toolbar"></include>

        <include
            layout="@layout/downbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <include
            layout="@layout/content_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_top_content" />

        <LinearLayout
            android:id="@+id/fabWrapperOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="@dimen/marginHorizontalButton"
            android:layout_marginBottom="@dimen/margin_down_buttons"
            android:background="@drawable/round_button"
            android:padding="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/addNewTimetable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:clickable="true"
                    android:scaleType="center"
                    app:fabSize="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="16dp"
                    android:text="@string/newPlan"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/mainColor"
                    android:textSize="@dimen/textButtonSize"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/fabWrapperBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginLeft="@dimen/marginHorizontalButton"
            android:layout_marginBottom="@dimen/margin_down_buttons"
            android:background="@drawable/round_button"
            android:padding="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:showIn="@layout/avtivity_calendar">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:clickable="true"
                    android:scaleType="center"
                    app:fabSize="normal" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="16dp"
                    android:text="@string/back"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/mainColor"
                    android:textSize="@dimen/textButtonSize"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/fabWrapperEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="@dimen/margin_down_buttons"
            android:background="@drawable/round_button"
            android:padding="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:showIn="@layout/avtivity_calendar">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:clickable="true"
                    android:scaleType="center"
                    app:fabSize="normal" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="16dp"
                    android:text="@string/editPlan"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/mainColor"
                    android:textSize="@dimen/textButtonSize"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>